# exam

./: README.md  pyproject.toml
exam/: exam.py  gui.kv
exam/questions/: questions.txt  save.txt
